# student-management-using-django

./: .dockerignore  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  requirements.txt
main_app/: EditResultView.py  admin.py  forms.py  hod_views.py  middleware.py  models.py  staff_views.py  student_views.py  urls.py  views.py
main_app/migrations/: 0001_initial.py
main_app/templates/hod_template/: home_content.html  manage_student.html
main_app/templates/main_app/: sidebar_template.html
mongo-entrypoint/: init_user.sh
student_management_system/: asgi.py  settings.py  urls.py  wsgi.py
